--- a/todo_app/templates/todo_list.html
+++ b/todo_app/templates/todo_list.html
@@ -26,4 +26,28 @@
         {% endfor %}
     </ul>
 </div>
+
+<div class="pagination">
+    {% if page_obj.has_previous %}
+        <a href="?page=1" class="pagination-link">
+            <i class="fas fa-angle-double-left"></i> <!-- First Page Icon -->
+        </a>
+        <a href="?page={{ page_obj.previous_page_number }}" class="pagination-link">
+            <i class="fas fa-angle-left"></i> <!-- Previous Page Icon -->
+        </a>
+    {% endif %}
+
+    <span class="pagination-current">
+        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+    </span>
+
+    {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}" class="pagination-link">
+            <i class="fas fa-angle-right"></i> <!-- Next Page Icon -->
+        </a>
+        <a href="?page={{ page_obj.paginator.num_pages }}" class="pagination-link">
+            <i class="fas fa-angle-double-right"></i> <!-- Last Page Icon -->
+        </a>
+    {% endif %}
+</div>
 {% endblock content %}
